@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
     - proyvind: python: add te.D() to return element distepoch.
     - jbj: blake: validate 224/256 reference blake against 8bit 0x00.
     - proyvind: python: handle None values in labelCompare() again.
